test.json gitignore

--- a/WebPhongKhamNhi/appsettings.json
+++ b/WebPhongKhamNhi/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "QLPhongKhamNhiContext": "Server=LAPTOP-S2EN0RRO\\SQLEXPRESS01;Database=QLPhongKhamNhi;Trusted_Connection=True;"
-    
-  }
+
+  },
+  sdfasdfasdffsafsfasd
 }
